--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@monaco-editor/react": "3.0.1",
     "firebase": "7.6.1",
+    "font-awesome": "4.7.0",
     "react": "16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-virtualized-auto-sizer": "1.0.2",
+    "react-window": "1.8.5"
   },
   "devDependencies": {
     "typescript": "3.3.3"
