--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1",
-    "react-virtualized-auto-sizer": "1.0.2",
-    "react-window": "1.8.5"
+    "react-scrollable-list": "1.2.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
