--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react": "16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1",
-    "react-scrollable-list": "1.2.0"
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
